# GHOSTNET

./: .env.example  .envrc  .gitignore  AGENTS.md  README.md  justfile  shell.nix
.github/workflows/: ci.yml
.opencode/agents/: akira-reviewer.md  dev  kōji-engineer.md  sen-architect.md
.opencode/commands/: rust-review.md
.opencode/skill/rust-cli-desktop-systems/: SKILL.md
.opencode/skill/rust-implementation-patterns/: SKILL.md
.opencode/skill/rust-performance-optimization/: SKILL.md
apps/web/: .env.example  .prettierignore  eslint.config.js  eslint.mvp.config.js  package.json  playwright.config.ts  prettier.config.mjs  svelte.config.js  tsconfig.json  vercel.json  vite.config.ts  wagmi.config.ts
docs/: GelatoVRF.md  MEGAETH.md  MegaETH_RealtimeAPI.md  MegaETH_Testnet.md  workflow
docs/architecture/: README.md  adr-circuit-breaker-reset-timelock.md  architecture-review-2026-01-20.md  backend-architecture.md  contract-specifications.md  emergency-procedures.md  frontend-architecture.md  ghost-fleet-requirements.md  implementation-plan.md  mvp-scope.md  overview.md  phase2-implementation-plan.md  prevrandao-verification-plan.md  runbook-circuit-breaker-response.md  security-audit-scope.md  smart-contracts-plan.md  ui-components.md
docs/archive/: README.md
docs/blueprint/: architecture.md  codebase.md  manifesto.md  quality.md  roadmap.md
docs/brainstorm/: BRAIN-2026-01-28-arcade-keyboard-games.md
docs/decisions/: ADR-001-randomness-strategy.md  ADR-003-presale-architecture.md
docs/design/: README.md  presale-system.md
docs/guides/: README.md
docs/integrations/: gelato-vrf.md  megaeth.md
docs/learnings/: 001-prevrandao-megaeth.md  004-timescaledb-hypertable-entity-antipattern.md  006-amount-scale-truncation-precision.md  007-gameregistry-architecture-decision.md  007-payout-refund-solvency-vulnerability.md  2026-01-19-phase4-command-center.md  2026-01-21-batch-credit-payouts-validation.md  2026-01-21-circuit-breaker-reset-timelock.md  2026-01-21-randomness-congestion-mitigation.md  2026-01-23-megaeth-foundry-deployment.md  2026-01-23-megaeth-rpc-extraction.md  2026-01-27-zzfx-parameter-offset-bug.md  2026-01-28-wagmi-injected-target-provider-resolution.md  README.md  presale-review-4.md  svelte5-effect-singleton-stores.md
docs/lessons/: 001-nix-shell-sccache-tmpdir.md  001-prevrandao-megaeth.md  002-makeaddr-string-encoding.md  003-megaeth-realtime-api.md  005-token-amount-bigdecimal-scale-mismatch.md  2026-01-20-evm-rust-guide-alignment.md  2026-01-21-randomness-congestion-mitigation.md  2026-01-21-randomness-timing-fix.md  2026-01-23-megaeth-foundry-deployment.md  README.md  megaeth-rpc-endpoints.md  wagmi-viem-typescript-strict-chains.md
docs/operations/: README.md  emergency-procedures.md
docs/product/: copy-writing-bible.md  master-design.md  one-pager.md
docs/references/: RustChangelog.md
docs/sessions/: 2026-01-19-frontend-architecture-planning.md  2026-01-19-smart-contracts-architecture.md  2026-01-21-randomness-congestion-mitigation.md  2026-01-24-mvp-scope-and-cleanup.md  README.md
docs/work/: backlog.md  dependencies.md  mvp-scope.md  recent.md  status.md
services/: Cargo.toml  README.md  deny.toml
services/crates/evm-provider/: Cargo.toml  README.md
services/crates/evm-provider/src/: error.rs  lib.rs  megaeth.rs  mock.rs  nonce.rs  standard.rs  traits.rs  types.rs
services/crates/fleet-core/: Cargo.toml
services/crates/fleet-core/src/: error.rs  lib.rs
services/crates/fleet-core/src/metrics/: mod.rs
services/crates/fleet-core/src/plugins/: mod.rs  registry.rs  traits.rs
services/crates/fleet-core/src/profiles/: mod.rs
services/crates/fleet-core/src/safety/: mod.rs
services/crates/fleet-core/src/scheduler/: mod.rs
services/crates/fleet-core/src/wallet/: mod.rs  state.rs
services/crates/megaeth-rpc/: Cargo.toml  README.md
services/crates/megaeth-rpc/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
services/ghost-fleet/: Cargo.toml  Dockerfile
services/ghost-fleet/config/: example.toml
services/ghost-fleet/docs/: configuration.md  deployment.md  operations.md
services/ghost-fleet/scripts/: generate-wallets.sh
services/ghost-fleet/src/: config.rs  engine.rs  error.rs  main.rs  service.rs
services/ghostnet-actions/: Cargo.toml
services/ghostnet-actions/src/: config.rs  contracts.rs  error.rs  lib.rs  math.rs  plugin.rs  state.rs
services/ghostnet-actions/src/actions/: ghost_core.rs  hashcrash.rs  mod.rs
services/ghostnet-indexer/: .env.example  Cargo.toml  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
services/ghostnet-indexer/.cargo/: config.toml
services/ghostnet-indexer/config/: default.toml  development.toml
services/ghostnet-indexer/migrations/: .gitkeep  20260121000001_enable_timescaledb.sql  20260121000002_indexer_state.sql  20260121000003_positions.sql  20260121000004_scans_deaths.sql  20260121100001_schema_v2_optimized.sql
services/ghostnet-indexer/src/: error.rs  lib.rs  main.rs
services/ghostnet-indexer/src/abi/: data_token.rs  dead_pool.rs  fee_router.rs  ghost_core.rs  mod.rs  rewards_distributor.rs  trace_scan.rs
services/ghostnet-indexer/src/config/: mod.rs  settings.rs
services/ghostnet-indexer/src/handlers/: death_handler.rs  emissions_handler.rs  fee_handler.rs  market_handler.rs  mod.rs  position_handler.rs  scan_handler.rs  token_handler.rs  traits.rs
services/ghostnet-indexer/src/indexer/: block_processor.rs  checkpoint.rs  event_router.rs  megaeth_rpc.rs  mod.rs  realtime_processor.rs  reorg_handler.rs
services/ghostnet-indexer/src/ports/: cache.rs  clock.rs  mod.rs  store.rs  streaming.rs
services/ghostnet-indexer/src/store/: cache.rs  mod.rs  postgres.rs
services/ghostnet-indexer/src/streaming/: iggy_publisher.rs  mod.rs  topics.rs
services/ghostnet-indexer/src/types/: entities.rs  enums.rs  events.rs  mod.rs  primitives.rs
services/ghostnet-indexer/tests/: full_flow_integration.rs  live_network_test.rs  reorg_integration.rs  store_integration.rs
services/ghostnet-indexer/tests/common/: containers.rs  fixtures.rs  mod.rs
(+424 files in other folders)
