# Ghost Fleet Service
# ═══════════════════════════════════════════════════════════════════════════════
#
# Main orchestrator service for GHOSTNET wallet automation. Coordinates:
# - Wallet management and scheduling
# - Plugin execution (ghostnet-actions)
# - Safety mechanisms (circuit breakers)
# - Observability (metrics, tracing)
#
# Usage:
#   ghost-fleet --config config.toml
#   ghost-fleet --help

[package]
name = "ghost-fleet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Ghost Fleet orchestrator service for GHOSTNET wallet automation"
keywords = ["ghostnet", "automation", "orchestrator", "defi"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "ghost-fleet"
path = "src/main.rs"

[dependencies]
# ───────────────────────────────────────────────────────────────────────────────
# WORKSPACE CRATES
# ───────────────────────────────────────────────────────────────────────────────
fleet-core = { workspace = true }
evm-provider = { workspace = true }
ghostnet-actions = { workspace = true }

# ───────────────────────────────────────────────────────────────────────────────
# ETHEREUM
# ───────────────────────────────────────────────────────────────────────────────
alloy = { workspace = true }

# ───────────────────────────────────────────────────────────────────────────────
# ASYNC
# ───────────────────────────────────────────────────────────────────────────────
tokio = { workspace = true, features = ["full", "signal"] }
async-trait = { workspace = true }

# ───────────────────────────────────────────────────────────────────────────────
# SERIALIZATION
# ───────────────────────────────────────────────────────────────────────────────
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# ───────────────────────────────────────────────────────────────────────────────
# OBSERVABILITY
# ───────────────────────────────────────────────────────────────────────────────
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ───────────────────────────────────────────────────────────────────────────────
# ERROR HANDLING
# ───────────────────────────────────────────────────────────────────────────────
thiserror = { workspace = true }
anyhow = { workspace = true }

# ───────────────────────────────────────────────────────────────────────────────
# UTILITIES
# ───────────────────────────────────────────────────────────────────────────────
chrono = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"

[lints]
workspace = true
